<resources>
    <string name="app_name">Splash</string>
    <string name="foodrunner">FoodRunner</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>

    <string name="your_string_here">
        This is an <u>underline</u>.
    </string>
    <string name="don_t_have_an_account_sign_up_now"><u>Don\'t have an account?Sign up now</u></string>
    <string name="details_request_text">Enter your registered mobile number and email below:</string>
    <string name="email_address">Email Address</string>
    <string name="name_min_3_character">Name(Min. 3 character)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password(Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="register">Register</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>