<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">


    <TextView
        android:id="@+id/txtRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register_yourself"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edtRegistrationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtRegisterTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/name_min_3_character"
        android:inputType="text"
        android:padding="6dp" />

    <EditText
        android:id="@+id/edtRegistrationEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtRegistrationName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="6dp" />

    <EditText
        android:id="@+id/edtRegistrationMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRegistrationEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_baseline_smartphone_24"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="6dp" />

    <EditText
        android:id="@+id/edtRegistrationDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRegistrationMobileNumber"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:hint="@string/delivery_address"
        android:inputType="text"
        android:padding="6dp" />

    <EditText
        android:id="@+id/edtRegistrationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRegistrationDeliveryAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/password_min_4_characters"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:id="@+id/edtRegistrationConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRegistrationPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRegistrationConfirmPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/login_color"
        android:text="@string/register"
        android:textStyle="bold" />

</RelativeLayout>