<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f44336">

    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />


    <EditText
        android:id="@+id/edtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLoginLogo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_baseline_smartphone_24"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtMobileNumber"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/login_color"
        android:text="@string/login_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/txtRegisterHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="20dp"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textColor="@color/white"
        android:textSize="15sp" />


</RelativeLayout>