<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">


    <ImageView
        android:id="@+id/imgForgotPasswordLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtDetailsRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgForgotPasswordLogo"
        android:layout_marginLeft="15dp"
        android:text="@string/details_request_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtForgotMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDetailsRequest"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:id="@+id/edtEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtForgotMobileNumber"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="6dp" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/login_color"
        android:text="Next"
        android:textStyle="bold" />


</RelativeLayout>